sumo/tests/duarouter/errors/false_input_sumo/options.duarouter
--net-file=input_net.net.xml --sumo-input=xxx.xml -o routes.rou.xml
